<resources>
    <string name="app_name">Food Recipe</string>
    <string name="grecipe" translatable="false">GRecipe</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_greet">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_greet">Lorem ipsum dolor sit amet, consectetur.</string>
    <string name="fullname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_agreement">By registering you agree to our\nTerms and Conditions</string>
    <string name="create_an_account">Create an \nAccount</string>
    <string name="create_account_description">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor incididunt ut.</string>
    <string name="register_using_email">Register using email</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forgot_password_title">Forgot\nPassword</string>
    <string name="next">Next</string>
    <string name="forgot_password_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="skip">Skip</string>
    <string name="preferred_any_food">Prefer\nany food?</string>
    <string name="continue_txt">Continue</string>
    <string name="your_info">Your info</string>
    <string name="name_title">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="gender">Gender</string>
    <string name="your_gender">Your gender</string>
    <string name="height">Height</string>
    <string name="your_current_height">Your current height</string>
    <string name="weight">Weight</string>
    <string name="your_current_weight">Your current weight</string>
    <string name="health_status">Health status</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="your_health_status">Your health status</string>
    <string name="none">None</string>
    <string name="send_to_email">Send to email</string>
    <string name="home">Home</string>
    <string name="ingredients">Ingredients</string>
    <string name="methods">Methods</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="what_do_you_want_to_cook_today">What do you want to\ncook today?</string>
    <string name="try_something_new">It\'s time to try something new...</string>
    <string name="suggest_for_you">Suggest for you</string>
    <string name="suggest_for_you_description">So many health-conscious recipes selected only for you</string>
    <string name="view_all">view all</string>
    <string name="so_many_health_conscious_recipes">So many health-conscious recipes...</string>
    <string name="collection">Collection</string>
    <string name="collection_description">Indulge in our vast collection featuring 100+ mouthwatering recipes.</string>
    <string name="find_the_perfect_recipe">Find the perfect recipe...</string>
    <string name="top_chef">Top chef</string>
    <string name="over_100_chefs">Over 100+ chefs...</string>
    <string name="daily_inspirations">Daily Inspirations</string>
    <string name="recipes_picked_by_our_editor">Recipes picked by our editor</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="minute">min</string>
    <string name="greeting">Hi,</string>
    <string name="recipes">Recipes</string>
    <string name="kcal">kcal</string>
    <string name="directions">Directions</string>
    <string name="start_cooking">Start Cooking</string>
    <string name="gram">gram</string>
    <string name="error_try_again_later">Error! Try again later</string>
    <string name="prepare_ingredient">Please prepare the ingredients before cooking</string>
    <string name="follow_to_cook">Follow these steps to cook this recipe</string>
    <string name="finish">Finish</string>
    <string name="search_by_image">Search by image</string>
    <string name="filter_search">Filter Search</string>
    <string name="meal_type">Meal Type</string>
    <string name="difficulty">Difficulty</string>
    <string name="diet_type">Diets</string>
    <string name="servings">Servings</string>
    <string name="total_time">Total time</string>
    <string name="authors">Authors</string>
    <string name="calories">Calories</string>
    <string name="network_not_connected">Network is not connected!</string>
    <string name="cuisines">Cuisines</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="suggest_recipes">Suggestions</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="age">Age</string>
    <string name="favorite">Favorite</string>
    <string name="bmi">BMI</string>
    <string name="normal">Normal</string>
    <string name="underweight">Underweight</string>
    <string name="bmi_under_value">16.0</string>
    <string name="bmi_normal_start_value">18.5</string>
    <string name="bmi_normal_end_value">25.0</string>
    <string name="bmi_high_value">40.5</string>
    <string name="daily_intake">Daily intake suggestion</string>
    <string name="overweight">Overweight</string>
    <string name="save">Save</string>
    <string name="ingredient_detection">Ingredient detection</string>
    <string name="detect_result">Detect Result</string>
    <string name="search_for_ingredients">Search for ingredients</string>
    <string name="find_all">Find all</string>
    <string name="health_goal_plan">Health Goal Plan</string>
    <string name="create_plan">Create Plan</string>
    <string name="health_goal">Health Goal</string>
    <string name="health_goal_description">Achieve wellness through exercise, balanced diet, and restful sleep habit</string>
    <string name="update_plan">Update plan</string>
    <string name="related_recipes">Related Recipes</string>
    <string name="healthy_food_choices_for_optimal_well_being">Healthy Food Choices for Optimal Well-being</string>
    <string name="in_progress">In Progress</string>
    <string name="target_weight">Target weight</string>
    <string name="day_goal">Day goal</string>
    <string name="start_day">Start day</string>
    <string name="finished">Finished</string>
    <string name="create_health_goal">Create Health Goal</string>
    <string name="your_target_weight">Your target weight</string>
    <string name="physical_level">Physical level</string>
    <string name="create">Create</string>
    <string name="start_weight">Start weight</string>
    <string name="daily_calories">Daily calories</string>
    <string name="daily_water">Daily water</string>
    <string name="daily_suggestions">Daily suggestions</string>
    <string name="calories_count">Calories count:</string>
    <string name="add_indicators">Add indicators</string>
    <string name="lose_weight">Lose weight</string>
    <string name="gain_weight">Gain weight</string>
    <string name="heart_rate">Heart rate</string>
    <string name="create_health_indicator">Create Health Indicator</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="your_blood_sugar_value">Your blood sugar value</string>
    <string name="your_heart_rate">Your heart rate</string>
</resources>