<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:background="@drawable/bg_app_dialog"
        android:elevation="@dimen/dimen_8dp"
        android:paddingHorizontal="@dimen/dimen_16dp">

        <TextView
            android:id="@+id/tv_create_health_goal_title"
            style="@style/TextMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_health_indicator"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_target_weight_title"
            style="@style/TextMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/weight"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_health_goal_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_current_weight"
            style="@style/TIPInputStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/dimen_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_target_weight_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_current_weight"
                style="@style/ETInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/your_current_weight"
                android:inputType="number"
                android:paddingTop="@dimen/dimen_4dp"
                android:paddingBottom="@dimen/dimen_4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_day_goal_title"
            style="@style/TextMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/heart_rate"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_current_weight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_heart_rate"
            style="@style/TIPInputStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/dimen_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_day_goal_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_heart_rate"
                style="@style/ETInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/your_heart_rate"
                android:inputType="number"
                android:paddingTop="@dimen/dimen_4dp"
                android:paddingBottom="@dimen/dimen_4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_blood_sugar_title"
            style="@style/TextMediumStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/blood_sugar"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_heart_rate" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tip_blood_sugar"
            style="@style/TIPInputStyle"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_marginTop="@dimen/dimen_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_blood_sugar_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_blood_sugar"
                style="@style/ETInputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/your_blood_sugar_value"
                android:inputType="numberDecimal"
                android:paddingTop="@dimen/dimen_4dp"
                android:paddingBottom="@dimen/dimen_4dp" />
        </com.google.android.material.textfield.TextInputLayout>
        >

        <Button
            android:id="@+id/btn_create_health_indicator"
            style="@style/CaretButtonStyle"
            android:layout_width="218dp"
            android:layout_height="@dimen/dimen_56dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_blood_sugar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
